--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,7 @@ baseURL = 'https://gylmar.com/'
 languageCode = 'en-us'
 title = "gyl's thought bubbles 🫧"
 theme = 'ananke'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
